# rust-wasm-apps

./: .gitignore  Cargo.toml
game_of_life/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
game_of_life/src/: index.tsx
game_of_life/src/app/: App.module.scss  App.tsx
game_of_life/src/app/types/: global.d.ts
game_of_life/src/app/ui/Scene/: Scene.module.scss  Scene.tsx
game_of_life/src/app/ui/Scene/Cells/: Cells.tsx
macros/: Cargo.toml
macros/src/: lib.rs
src/: game_of_life.rs  lib.rs  utils.rs
src/game_of_life/: mod.rs  universe_tests.rs
src/planet/: mod.rs
src/planet/convex_hull/: mod.rs  tests.rs
src/planet/point_distribution/: impls.rs  mod.rs  tests.rs  wasm.rs
src/planet/point_distribution/point/: impls.rs  mod.rs
src/planet/point_distribution/ui/: mod.rs  normalize.rs
src/planet/point_distribution/ui/convex_hull/: mod.rs  old.rs  tests.rs  wasm.rs
src/planet/point_distribution/ui/spherical/: mod.rs
src/planet/point_distribution/ui/triangulate/: mod.rs  spherical_triangulate.rs  tests.rs
src/planet/point_distribution/ui/triangulate/delone/: algorithm.drawio  mod.rs  tests.rs
src/planet/point_distribution/ui/triangulate/ui/: mod.rs
src/planet/point_distribution/ui/voronoi/: mod.rs  tests.rs  wasm.rs
src/planet/shared/: mod.rs
src/planet/shared/point/: mod.rs
src/planet/shared/traits/: mod.rs
src/planet/shared/vector/: impls.rs  mod.rs  svg.rs  tests.rs
src/planet/shared/vector/impls/: arithmetic.rs  from.rs  mod.rs  of_to.rs  ordering.rs
src/planet/shared/vector/ui/: mod.rs
src/planet/shared/vector/ui/circle/: mod.rs  (+1 more)
src/planet/triangulate/: mod.rs
src/planet/triangulate/circumference/: mod.rs  tests.rs
src/planet/vector/: mod.rs
src/traits/: as_.rs  as_prim.rs  mod.rs  of_to.rs
src/universe_tests/: mod.rs
src/utils/: mod.rs  svg.rs
(+56 files in other folders)
