[package]
name = "rust_wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
wasm-bindgen = { version = "0.2.84", features = [] }
getrandom = { version = "0.2.12", default-features = false, features = ["js"] }
cargo-expand = "1.0.79"
wasm-bindgen-test = "0.3.40"
serde_tuple = "0.5.0"

[lib]
crate-type = ["cdylib", "rlib"]
